JSHManager ChangeLog

Version 0.2.3
-------------
- Some text has been converted to be more "friendly."
- The splash screen is no longer always-on-top.
- Added a context menu when you right-click on a song in the scores
  table with links to its wiki page as well as any links on its SP page.
- Added wiki menu.

Version 0.2.2
-------------
- Corrected a bug that prevented you from logging in if you did not
  enter your username /exactly/ as it appeared on ScoreHero.
- Clicking a blue, underlined score (or the open button next to the image
  URL in the editor) will now open an internal picture viewer instead of 
  launching an external browser, if possible.
- Added better detection for determining if a score submission was successful. 
  Scores can be resubmitted if it is not certain they were submitted initially.
  These scores will be highlighted red instead of blue to indicate their
  status.
- Added "Go to Song" item to the main "Scores" menu and the score editor.

Version 0.2.1
-------------
- Added extra logging and improved error checking when logging in to
  ScoreHero.
- Added a new menu item to upload logs to pastebin.com in the
  Help -> View Log menu. After uploading, you can copy and paste the
  URLs when reporting an issue so that I can see the logging information.
- Added a new step to the score download wizard that allows you to download
  scores for multiple platforms/difficulties/instruments in one shot.
- Fixed bug when trying to download RB scores where a rating wasn't specified.
- Added a CSV score importer accessible from the "Scores" menu. See
  Readme.txt for more details.

Version 0.2.0
-------------
- Rock Band 1 and 2 are now supported. While it only took 35 characters
  to express that, I assure you, it took a significant effort to
  actually make it happen ;)
- Corrected issue when updating Guitar Hero song data that failed to
  update an existing song if new information had been discovered, such
  as a note count.